--- a/index_es.html
+++ b/index_es.html
@@ -483,7 +483,7 @@
                           <div class="col-md-12">
                             <input id="comparar-nat2" class="comparar-nat" type="checkbox">
                             <label for="comparar-nat2">
-                              <div class="imgimg img-comp text-center">
+                              <div class="imgimg img-comp text-center naturemap-txt">
                                 Comparar Soluciones
                                 <div class="chequeado">
                                   <img src="img/check.png" width="20px">
@@ -495,7 +495,7 @@
 
                         <div class="row espaciado">
                           <div class="col-md-12">
-                              <div class="texto-nat-ter text-center col-md-7">Territorio (%):</div>
+                              <div class="texto-nat-ter text-center col-md-7 naturemap-txt">Territorio (%):</div>
                               <div class="texto-nat-ter text-center territorio col-md-1" style="display:inline-block;" id="territorio"> 13 </div>
                           </div>
                           <div class="col-md-12 inputs-naturemap">
@@ -505,7 +505,7 @@
 
                         <div class="row espaciado">
                             <div class="col-md-5">
-                                <div class="texto-nat">Carbono (%):</div>
+                                <div class="texto-nat naturemap-txt">Carbono (%):</div>
                                 <div style="display:inline-block" id="carbono"> </div>
                             </div>
                             <div class="col-md-6 inputs-naturemap">
@@ -514,7 +514,7 @@
                         </div>
                         <div class="row espaciado" >
                             <div class="col-md-5">
-                                <div class="texto-nat"> Agua (%):</div>
+                                <div class="texto-nat naturemap-txt"> Agua (%):</div>
                                 <div style="display:inline-block" id="agua"> </div>
                             </div>
                             <div class="col-md-6 inputs-naturemap">
@@ -523,7 +523,7 @@
                         </div>
                         <div class="row espaciado">
                             <div class="col-md-5">
-                                <div class="texto-nat"> Biodiversidad (%): </div>
+                                <div class="texto-nat naturemap-txt"> Biodiversidad (%): </div>
                                 <div style="display:inline-block" id="biodiversidad"> </div>
                             </div>
                             <div class="col-md-6 inputs-naturemap">
