--- a/index_en_es.html
+++ b/index_en_es.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title> ViewMap v5 - Beta </title>
+  <title> Land Use ViewMap Argentina </title>
 
 
   <meta charset="utf-8">
@@ -43,7 +43,7 @@
 
 
 <div class="container text-center titulo">
-  ViewMap v5 - Beta
+  Land Use ViewMap Argentina
 </div>
 
 
