--- a/index_es.html
+++ b/index_es.html
@@ -380,8 +380,22 @@
 
                     <button class="btn-acordion capa-cultivos" data-info="cult" > Cultivos <i class="fa fa-leaf"></i> </button>
                     <div class="capas capas2" id="cult">
-                      <button class="btn-acordion capa-cultivos2" data-info="soja" > Soja </button>
-                      <div class="capas capas2" id="soja">
+                      <button class="btn-acordion capa-cultivos2" data-info="soja-trigo" > Soja - Trigo </button>
+                      <div class="capas capas2" id="soja-trigo">
+                        <!--
+                        <input class='rtaV0 capa_raster' id='soja_p_inta' data-id='soja_p_inta'
+                        data-class='soja_p_inta' data-name='soja' type='checkbox'> `;
+                        <label for='soja_p_inta'>
+                          <div class='imgimg4'>
+                            <div>
+                              Soja Presente Inta
+                            </div>
+                          <div class='chequeado'>
+                            <img src='img/check.png' width='30px'>
+                          </div>;
+                          </div>
+                        </label>;
+-->
                         <!-- input con rasters.js -->
                       </div>
                       <button class="btn-acordion capa-cultivos2" data-info="maiz" > Maiz </button>
