--- a/index_es.html
+++ b/index_es.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title> VISUALIZADOR DEMO </title>
+  <title> Visualizador </title>
 
 
   <meta charset="utf-8">
@@ -853,6 +853,48 @@
 <div class="loading">
   <div class="loading2">
     <i class="fa fa-spinner fa-spin"></i>
+  </div>
+</div>
+
+
+
+<div class="modal-legenda-cultivos">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-1 legenda-cuadro-1">
+      </div>
+      <div class="col-9">
+        0 - 10 %
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-2 legenda-cuadro-2">
+      </div>
+      <div class="col-9">
+        10 - 25 %
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-2 legenda-cuadro-3">
+      </div>
+      <div class="col-9">
+        25 - 50 %
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-2 legenda-cuadro-4">
+      </div>
+      <div class=" col-9">
+        50 - 75 %
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-2 legenda-cuadro-5">
+      </div>
+      <div class="col-9">
+        75- 100 %
+      </div>
+    </div>
   </div>
 </div>
 
