--- a/index_en.html
+++ b/index_en.html
@@ -3209,9 +3209,12 @@ $("#prueba_marker_out").click(function(){
 <script>
 
 
-
-
-
+/*
+var popup = L.popup()
+    .setLatLng([-45, -68])
+    .setContent("Click on sidebar to select layers")
+    .openOn(mymap);
+*/
 
 // movie_active( rasters_video_layers )
 
