--- a/index_es.html
+++ b/index_es.html
@@ -898,6 +898,13 @@
   </div>
 </div>
 
+
+<div class="modal-inicio">
+  <img src="img/flecha_texto.png">
+</div>
+
+
+
 </body>
 
 
@@ -3234,6 +3241,9 @@ $("#prueba_marker_out").click(function(){
 $("#movie_out").click( ()=>{
   aluminio.remove(mymap)
 });
+
+
+$(".modal-inicio").show(3000).delay(3000).fadeOut(2000);
 
 </script>
 
