--- a/index_en.html
+++ b/index_en.html
@@ -885,6 +885,11 @@
 </div>
 
 
+<div class="modal-inicio">
+  <img src="img/flecha_texto.png">
+</div>
+
+
 </body>
 
 
@@ -3225,6 +3230,9 @@ $("#movie_out").click( ()=>{
   aluminio.remove(mymap)
 });
 
+
+
+$(".modal-inicio").show(3000).delay(3000).fadeOut(2000);
 </script>
 
 
