--- a/index_en.html
+++ b/index_en.html
@@ -93,7 +93,7 @@
                 <!-- top aligned tabs -->
                 <ul role="tablist">
                     <li><a href="#control" role="tab"><i class="fa fa-bars active"></i></a></li>
-                    <li><a href="#capas" role="tab"><i class="fa fa-layer-group"></i></a></li>
+                    <li><a class = "initial-light" href="#capas" role="tab"><i class="fa fa-layer-group"></i></a></li>
                     <li><a href="#mas" role="tab"> <i class="fa fa-plus"></i></a></li>
                 </ul>
 
@@ -635,6 +635,39 @@
                       </div>
                     -->
 
+                    <!-- SUELOS -->
+                      <button class="btn-acordion capa-suelos" data-info="suelos" > Soils </button>
+                      <div class="capas capas2" id="suelos">
+                        <input class="rtaV0" id="cult_label" type="checkbox" data-id=" " data-class=" ">
+                        <label for="cult_label">
+                          <div class="container pt-3 pb-3">
+                            <div class="row pb-3">
+                              <div class="logo_suelos">
+                              </div>
+                            </div>
+                            <div class="row">
+                              <select class="select-layer-others" id="suelos_layers">
+                                <option value="none" > Select Soil </option>
+                              </select>
+                            </div>
+                            <div class="row pt-1 pb-1">
+                              <div class="col-12">
+                                <select class="maswms_select" id="suelos_layers_2" > </select>
+                              </div>
+                            </div>
+                            <div class="row text-center pt-2">
+                              <div class="col-6">
+                                <button class="btn-others" id="suelos_layer_in"> Insert </button>
+                              </div>
+                              <div class="col-6">
+                                <button class="btn-others tilelayer_rmv"> Delet </button>
+                              </div>
+                            </div>
+                          </div>
+
+                        </label>
+                      </div>
+
                       <!-- Empieza MAS WMS A -->
                       <button class="btn-acordion capa-maswms" data-info="maswms" > More Arg WMS </button>
                       <div class="capas capas2" id="maswms">
@@ -699,38 +732,7 @@
                         </label>
                       </div>
 
-                        <!-- SUELOS -->
-                        <button class="btn-acordion capa-cultivos" data-info="suelos" > Soils <i class="fa fa-leaf"></i> </button>
-                      <div class="capas capas2" id="suelos">
-                        <input class="rtaV0" id="cult_label" type="checkbox" data-id=" " data-class=" ">
-                        <label for="cult_label">
-                          <div class="container pt-3 pb-3">
-                            <div class="row pb-3">
-                              <div class="logo_suelos">
-                              </div>
-                            </div>
-                            <div class="row">
-                              <select class="select-layer-others" id="suelos_layers">
-                                <option value="none" > Select Soil </option>
-                              </select>
-                            </div>
-                            <div class="row pt-1 pb-1">
-                              <div class="col-12">
-                                <select class="maswms_select" id="suelos_layers_2" > </select>
-                              </div>
-                            </div>
-                            <div class="row text-center pt-2">
-                              <div class="col-6">
-                                <button class="btn-others" id="suelos_layer_in"> Insert </button>
-                              </div>
-                              <div class="col-6">
-                                <button class="btn-others tilelayer_rmv"> Delet </button>
-                              </div>
-                            </div>
-                          </div>
 
-                        </label>
-                      </div>
 
 
                     </div>
@@ -3232,7 +3234,17 @@ $("#movie_out").click( ()=>{
 
 
 
-$(".modal-inicio").show(3000).delay(3000).fadeOut(2000);
+/* SEÑALIZACION INICIO */
+$(".modal-inicio").show(1000, function(){
+  $(".initial-light").addClass("initial-light2");
+})
+setTimeout(function(){
+  $(".modal-inicio").hide(1000,function(){
+    $(".initial-light").removeClass("initial-light2");
+  })
+},5000)
+
+
 </script>
 
 
