--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title> ViewMap v5 - Beta </title>
+  <title> Land Use Map Viewer Argentina </title>
 
 
   <meta charset="utf-8">
@@ -18,7 +18,7 @@
  	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Montserrat:300,400,500,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Fondamento:300,300i,400,400i,700,700i|Montserrat:300,400,500,700" rel="stylesheet">
 	<link href='https://fonts.googleapis.com/css?family=Calistoga' rel='stylesheet'>
-  	<link href='https://fonts.googleapis.com/css?family=Fondamento' rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/css?family=Fondamento' rel='stylesheet'>
 
   <!-- Bootstrap CSS Files -->
   <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -43,7 +43,8 @@
 
 
 <div class="container text-center titulo">
-  ViewMap v5 - Beta
+Map Viewer Land Use  Argentina
+<!--<div id="google_translate_element" style="width:100px;height:100px;"></div>-->
 </div>
 
 
@@ -92,9 +93,14 @@
 <script type="text/javascript" src="bootstrap/js/popper.min.js"></script>
 
 <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
-
-
-
+<!--
+<script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+<script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+}
+</script>
+-->
 
 
 
