--- a/index_es.html
+++ b/index_es.html
@@ -859,7 +859,38 @@
   </div>
 </div>
 
-
+<!--
+<div class="info-project">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12 text-center info-project-titulo">
+        TITULO - INFO
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-1">
+        INDICE
+        <ul>
+          <li class="asd1" data-info="pp"> <a href="#"> asd1 </a> </li>
+          <li class="asd1" data-info="pp2"> <a href="#"> asd2 </a> </li>
+        </ul>
+      </div>
+      <div id="info-project-info" class="offset-md-1 col-md-9">
+        info info info info info info info info
+        info info info info info info info info
+        info info info info info info info info
+        info info info info info info info info
+        info info info info info info info info
+        info info info info info info info info
+        info info info info info info info info
+        info info info info info info info info
+        info info info info info info info info
+        info info info info info info info info
+      </div>
+    </div>
+  </div>
+</div>
+-->
 
 <div class="modal-legenda-cultivos">
   <div class="container-fluid">
@@ -2349,7 +2380,7 @@ $(".leaflet-browser-print").click(function(){
 
 /* Variacion de Barritas (Porcentajes y Consola on INPUT de Barritas) */
 
-/*
+
 $(".inputs-naturemap").children().on("input",function(){
   var checked = $("#nat0").is(":checked");
   if(checked){
@@ -2362,6 +2393,7 @@ $(".inputs-naturemap").children().on("input",function(){
     else{
       $("#"+dataid).html(valor1);
     }
+    /*
     var p_t = $("#input-nat-t").val();
     var p_c = $("#input-nat-c").val();
     var p_a = $("#input-nat-a").val();
@@ -2422,13 +2454,13 @@ $(".inputs-naturemap").children().on("input",function(){
     $("#barrita-b").css("width", p_b+"%");
     $("#barrita-b").html(p_b+"%")
 
-
+*/
 
 
 
   }
 });
-*/
+
 
 
 
